--- a/backend/.env
+++ b/backend/.env
@@ -31,3 +31,9 @@ YANDEX_SMTP_PASSWORD=yemiewyefyxruwwj
 YANDEX_SMTP_USER=maga2007.magomedov@yandex.ru
 YANDEX_SMTP_PORT=587
 YANDEX_SMTP_HOST=smtp.yandex.ru
+
+AWS_ACCESS_KEY=YCAJEQ0kT4hPUy3wcYuj-n-Jj
+AWS_SECRET_ACCESS_KEY=YCPnn9Yu_i1oVC95qERB6_tA0rRsKmkXYX_xaS05
+AWS_REGION=ru-central1
+AWS_BUCKET_NAME=mago-storage
+AWS_ENDPOINT_URL=https://storage.yandexcloud.net
