--- a/backend/.env
+++ b/backend/.env
@@ -12,6 +12,11 @@ JWT_REFRESH_TOKEN_TIME=7
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
+RABBIT_USER=guest
+RABBIT_PASS=guest
+RABBIT_HOST=localhost
+RABBIT_PORT=5672
+
 GITHUB_CLIENT_ID=Ov23limGMsLTJrPzMmxb
 GITHUB_CLIENT_SECRET=6b3cbca061f1ad9621409d7b5a09862c04627be8
 GITHUB_BASE_URL=https://github.com
