--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,20 @@ services:
     container_name: redis-store
     networks:
       - app-network
+
+  rabbitmq:
+    image: rabbitmq:3.10.7-management
+    container_name: rabbitmq-store
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   
   nginx:
     image: nginx:latest
@@ -77,6 +91,8 @@ services:
       - app-network
     depends_on:
       - db
+      - redis
+      - rabbitmq
     restart: always
 
 
