--- a/frontend/.env
+++ b/frontend/.env
@@ -4,6 +4,6 @@ VITE_GITHUB_CLIENT_ID=Ov23limGMsLTJrPzMmxb
 VITE_VK_API_URL=https://oauth.vk.com/authorize
 VITE_VK_APP_ID=52897160
 VITE_VK_SECRET=VOOf2HyLYFXh3lIUSUlp
-VITE_REDIRECT_URI=https://6d47-176-124-206-69.ngrok-free.app
+VITE_REDIRECT_URI=https://www.fasttaski.ru
 VITE_YANDEX_API_URL=https://oauth.yandex.ru
-VITE_YANDEX_CLIENT_ID=f708ba587b50423ea24c050f6d0a517bgit
+VITE_YANDEX_CLIENT_ID=f708ba587b50423ea24c050f6d0a517b
