--- a/backend/.env
+++ b/backend/.env
@@ -14,7 +14,7 @@ REDIS_PORT=6379
 
 RABBIT_USER=guest
 RABBIT_PASS=guest
-RABBIT_HOST=localhost
+RABBIT_HOST=rabbitmq
 RABBIT_PORT=5672
 
 GITHUB_CLIENT_ID=Ov23limGMsLTJrPzMmxb
