--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_BASE_API_URL=http://fasttaski.ru/api/v1
+VITE_BASE_API_URL=https://fasttaski.ru/api/v1
 VITE_GITHUB_OAUTH_URL=https://github.com/login/oauth
 VITE_GITHUB_CLIENT_ID=Ov23limGMsLTJrPzMmxb
 VITE_VK_API_URL=https://oauth.vk.com/authorize
